--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,34 +6,16 @@
 body{
     background-color: #f2f2f2;
 }
-
-.heading{
-    font-size: 25px;
-    font-weight: bolder;
-position: relative;
+.dropDown{
+    left: 50%;
+    transform: translate(-50%);
 }
-.heading span{
-    display: block;
-    width: 300px;
-    z-index: 10;
 
-}
-.heading::after{
-    position: absolute;
-    content: '';
-    height: 1px ;
-    width: calc(100% - 300px);
-    border: 1px solid #e0e0e0;
-    top: calc(50% - 0.5px);
-    /* left: 0; */
-    z-index: 1;
-
-    right: 0;
-}
 
 @media screen and (max-width: 720px) {
 .categoryDiv{
     width: 98%;
+padding-top: 10px;
 }
 .categoryimg{
     width: 57px;
@@ -41,10 +23,10 @@ position: relative;
 
 }
 .categoryName{
-    width: 60px;
-    height: max-content;
+    width: 90px;
+    height: 40px;
     font-size: 12px;
-    font-weight: lighter;
+    font-weight: normal;
 }
 .productCard{
     width: 170px;
