--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,12 @@ body{
     }.navBarLinks{
         display: none;
     }
+    .productName{
+        font-size: 16px;
+    }
+    .disPrice{
+        font-size: 13px;
+    }
 .categoryDiv{
     width: 98%;
 padding-top: 10px;
